Create individual folders per app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,4 @@ FetchContent_Declare(SFML
 )
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics)
-
-if(WIN32)
-add_custom_command(
-    TARGET main
-    COMMENT "Copy OpenAL DLL"
-    PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<BOOL:${ARCH_64BITS}>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
-    VERBATIM)
-endif()
+add_subdirectory(minesweeper)
