Refactor game logic

--- a/minesweeper/CMakeLists.txt
+++ b/minesweeper/CMakeLists.txt
@@ -1,12 +1,14 @@
-add_executable(minesweeper main.cpp)
+add_executable(minesweeper WIN32 main.cpp minesweeper.cpp)
 target_link_libraries(minesweeper PRIVATE sfml-graphics)
 
 if(WIN32)
-add_custom_command(
-    TARGET minesweeper
-    COMMENT "Copy OpenAL DLL"
-    PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<BOOL:${ARCH_64BITS}>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:minesweeper>
-    VERBATIM)
+    target_link_libraries(minesweeper PRIVATE sfml-main)
+
+    add_custom_command(
+        TARGET minesweeper
+        COMMENT "Copy OpenAL DLL"
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<BOOL:${ARCH_64BITS}>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:minesweeper>
+        VERBATIM)
 endif()
 
 add_custom_command(
