Change target names to be lowercase

--- a/minesweeper/CMakeLists.txt
+++ b/minesweeper/CMakeLists.txt
@@ -1,15 +1,20 @@
-embed_resource(Minesweeper-Tileset ${CMAKE_CURRENT_SOURCE_DIR}/resources/tileset.png)
+embed_resource(minesweeper-numbers ${CMAKE_CURRENT_SOURCE_DIR}/resources/numbers.png)
+embed_resource(minesweeper-tileset ${CMAKE_CURRENT_SOURCE_DIR}/resources/tileset.png)
 
-add_library(Minesweeper-Lib STATIC Minesweeper.cpp)
-target_link_libraries(Minesweeper-Lib PUBLIC
-    Minesweeper-Tileset
+add_library(minesweeper Minesweeper.cpp)
+target_link_libraries(minesweeper PUBLIC
+    minesweeper-numbers
+    minesweeper-tileset
     sfml-graphics
 )
 
-add_executable(Minesweeper WIN32 Main.cpp)
-target_link_libraries(Minesweeper PRIVATE
-    Minesweeper-Lib
+add_executable(minesweeper-exec WIN32 Main.cpp)
+target_link_libraries(minesweeper-exec PRIVATE
+    minesweeper
     ImGui-SFML::ImGui-SFML
     sfml-graphics
 )
-sfml_action(Minesweeper)
+
+if(WIN32)
+    target_link_libraries(minesweeper-exec PRIVATE sfml-main)
+endif()
